--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
-repos 
+---
+repos:
   - repo: https://github.com/saikiransunkara/my-pre-commit-hooks
     rev: main
     hooks:
-     - id: check-zero-kb-files
-       name: Check for 0 KB files
-       entry: scripts/check-zero-kb-file.sh
-       language: script
-       files: .*
+      - id: check-zero-kb-files
+        name: Check for 0 KB files
+        entry: scripts/check-zero-kb-file.sh
+        language: script
+        files: .*
